Use --truncated CSS class for course parts with ellipsis

--- a/src/ui/Assets/Styles/patterns/_course-parts.scss
+++ b/src/ui/Assets/Styles/patterns/_course-parts.scss
@@ -22,7 +22,7 @@
         }
       }
 
-      &__value {
+      &__value--truncated {
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
