--- a/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
@@ -22,7 +22,7 @@
           <a href="@url#CourseLength-wrapper" class="govuk-link"><span asp-validation-for="CourseLength"></span></a>
         }
       </dt>
-      <dd class="govuk-summary-list__value @(courseEnrichment.CourseLength == null ? "course-parts__fields__value--empty" : "")">
+      <dd class="govuk-summary-list__value govuk-summary-list__value--truncated @(courseEnrichment.CourseLength == null ? "course-parts__fields__value--empty" : "")">
         @(@courseEnrichment?.CourseLength.DisplayText() == "Other" ? courseEnrichment.CourseLengthInput : courseEnrichment?.CourseLength.DisplayText())
       </dd>
     </div>
@@ -34,7 +34,7 @@
           <a href="@url#SalaryDetails-wrapper" class="govuk-link"><span asp-validation-for="SalaryDetails" ></span></a>
         }
       </dt>
-      <dd class="govuk-summary-list__value @(string.IsNullOrWhiteSpace(courseEnrichment.SalaryDetails) ? "course-parts__fields__value--empty" : "")">
+      <dd class="govuk-summary-list__value govuk-summary-list__value--truncated @(string.IsNullOrWhiteSpace(courseEnrichment.SalaryDetails) ? "course-parts__fields__value--empty" : "")">
         @courseEnrichment?.SalaryDetails.DisplayText()
       </dd>
     </div>
