--- a/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_AboutCourseOverview.cshtml
@@ -11,7 +11,7 @@
 }
 
 <div class="course-parts__item course-parts__item--borderless">
-  <h3 class="course-parts__title">
+  <h3 class="govuk-heading-m govuk-!-font-size-27">
     <a href="@url">About this course</a>
   </h3>
   <dl class="govuk-summary-list">
