--- a/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_FeeBasedCourseOverview.cshtml
@@ -13,7 +13,7 @@
 }
 
 <div class="course-parts__item course-parts__item--borderless">
-  <h3 class="course-parts__title">
+  <h3 class="govuk-heading-m govuk-!-font-size-27">
     <a href="@url">Course length and fees</a>
   </h3>
   <dl class="govuk-summary-list">
