--- a/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
+++ b/src/ui/Views/Course/Shared/_SalaryBasedCourseOverview.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="course-parts__item course-parts__item--borderless">
-  <h3 class="course-parts__title">
+  <h3 class="govuk-heading-m govuk-!-font-size-27">
     <a href="@url">Course length and salary</a>
   </h3>
   <dl class="govuk-summary-list">
