--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -24,7 +24,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="course-parts">
         <div class="course-parts__item course-parts__item--borderless">
-          <h2 class="course-parts__title">Information from UCAS</h2>
+          <h2 class="govuk-heading-m govuk-!-font-size-27">Information from UCAS</h2>
 
           @if(Model.Course.StatusAsEnum != CourseRunningStatus.Running)
           {
@@ -107,10 +107,10 @@
       }
 
         <div class="course-parts__item course-parts__item--borderless">
-          <h2 class="course-parts__title">Training locations</h2>
+          <h2 class="govuk-heading-m govuk-!-font-size-27">Training locations</h2>
           @foreach (var site in Model.Course.Sites.Where(x => x.Status != "S"))
           {
-            <h3 class="govuk-heading-s">@site.LocationName (Code: @site.Code)</h3>
+            <h3 class="govuk-heading-m">@site.LocationName (Code: @site.Code)</h3>
             <dl class="govuk-summary-list">
               @if (!string.IsNullOrEmpty(@site.Address))
               {
@@ -150,7 +150,7 @@
               <div class="govuk-details__text">
                 @foreach (var site in Model.Course.Sites.Where(x => x.Status == "S"))
                 {
-                  <h3 class="govuk-heading-s">@site.LocationName (Code: @site.Code)</h3>
+                  <h3 class="govuk-heading-m">@site.LocationName (Code: @site.Code)</h3>
                   <dl class="govuk-summary-list">
                     @if (!string.IsNullOrEmpty(@site.Address))
                     {
