Use govuk-summary-list component for UCAS information on course overview

--- a/src/ui/Views/Course/Show.cshtml
+++ b/src/ui/Views/Course/Show.cshtml
@@ -55,43 +55,69 @@
 
           <p class="govuk-body">You can only change this information using <a href="https://update.ucas.co.uk/netupdate2/Welcome.htm">UCAS web-link</a>. Changes will usually appear here within one working day.</p>
 
-          <dl class="govuk-list govuk-list--description">
+          <dl class="govuk-summary-list">
             @if (!string.IsNullOrEmpty(@Model.Course.Status))
             {
-              <dt>Status:</dt>
-              <dd>@Model.Course.Status</dd>
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Status</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.Status</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.CourseTitle)) {
-              <dt>Name:</dt>
-              <dd>@Model.Course.CourseTitle</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.CourseTitle))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Name</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.CourseTitle</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.ProviderCode)) {
-              <dt>Training provider code:</dt>
-              <dd>@Model.Course.ProviderCode</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.ProviderCode))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Training provider code</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.ProviderCode</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.CourseCode)) {
-              <dt>Training programme code:</dt>
-              <dd>@Model.Course.CourseCode</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.CourseCode))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Training programme code</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.CourseCode</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.AccreditingProviderName)) {
-              <dt>Accredited provider:</dt>
-              <dd>@Model.Course.AccreditingProviderName</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.AccreditingProviderName))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Accredited provider</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.AccreditingProviderName</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.GetRoute())) {
-              <dt>Route:</dt>
-              <dd>@Model.Course.GetRoute()</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.GetRoute()))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Route</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.GetRoute()</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.Subjects)) {
-              <dt>Subjects:</dt>
-              <dd>@Model.Course.Subjects</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.Subjects))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Subjects</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.Subjects</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.GetStudyMode())) {
-              <dt>Mode of study:</dt>
-              <dd>@Model.Course.GetStudyMode()</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.GetStudyMode()))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Mode of study</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.GetStudyMode()</dd>
+              </div>
             }
-            @if (!string.IsNullOrEmpty(@Model.Course.GetQualification())) {
-              <dt>Qualification:</dt>
-              <dd>@Model.Course.GetQualification()</dd>
+            @if (!string.IsNullOrEmpty(@Model.Course.GetQualification()))
+            {
+              <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">Qualification</dt>
+                <dd class="govuk-summary-list__value">@Model.Course.GetQualification()</dd>
+              </div>
             }
           </dl>
         </div>
@@ -115,19 +141,19 @@
               @if (!string.IsNullOrEmpty(@site.Address))
               {
                 <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">Address:</dt>
+                  <dt class="govuk-summary-list__key">Address</dt>
                   <dd class="govuk-summary-list__value">@site.Address</dd>
                 </div>
               }
               @if (!string.IsNullOrEmpty(@site.Status))
               {
                 <div class="govuk-summary-list__row">
-                  <dt class="govuk-summary-list__key">Status:</dt>
+                  <dt class="govuk-summary-list__key">Status</dt>
                   <dd class="govuk-summary-list__value">@site.GetSiteStatus()</dd>
                 </div>
               }
               <div class="govuk-summary-list__row">
-                <dt class="govuk-summary-list__key">Vacancies:</dt>
+                <dt class="govuk-summary-list__key">Vacancies</dt>
                 <dd class="govuk-summary-list__value">@site.GetVacancyStatus()</dd>
               </div>
               @if (!string.IsNullOrEmpty(@site.ApplicationsAcceptedFrom))
